Fixed Pokétile alignment.

--- a/pokelympics/public/css/style.css
+++ b/pokelympics/public/css/style.css
@@ -112,7 +112,8 @@
 .poketile {
   background-color: rgba(61, 146, 252, 0);
   border-radius: 10px;
-  padding: 0 0 25px 0;
+  padding: 0 0 15px 0;
+  margin-bottom: 15px;
   -webkit-transition: background-color 200ms linear;
   -moz-transition: background-color 200ms linear;
   -o-transition: background-color 200ms linear;
@@ -3050,31 +3051,31 @@ input[type="number"] {
   margin-bottom: 50px;
 }
 
-.animate0 { 
+.animate0 {
   position: relative;
   width: 100px;
   height: 100px;
-  
+
   margin-top: 25px;
 }
 .animate1 {
   position: relative;
   width: 100px;
   height: 100px;
-  
+
   top: 25px;
 }
 .animate2 {
   position: relative;
   width: 100px;
   height: 100px;
-  
+
   top: 25px;
 }
 .animate3 {
   position: relative;
   width: 100px;
   height: 100px;
-  
+
   top: 25px;
 }
